# OpenGL

./: .gitignore  CMakeLists.txt
resources/: default.frag  default.vert  light.vert
src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  shaderClass.cpp  shaderClass.h  stb.cpp
